# Python-Poetry

newProject/: pyproject.toml
newProject/newproject/: __init__.py
